[package]
name = "p2p-transfer"
version = "2.0.0"
edition = "2024"

[[bin]]
name = "p2pt"
path = "src-backend/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["http2"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dotenv = "0.15.0"
mimalloc = "0.1.46"
socketioxide = "0.16.2"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["compression-full", "decompression-full", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
